--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,11 +1,11 @@
 {
   "semi": true,
-  "tabWidth": 2,
-  "printWidth": 100,
-  "singleQuote": true,
   "trailingComma": "es5",
+  "singleQuote": true,
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "endOfLine": "auto",
   "bracketSpacing": true,
-  "jsxBracketSameLine": false,
-  "arrowParens": "avoid",
-  "endOfLine": "auto"
+  "arrowParens": "avoid"
 } 
