--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3'
 services:
   api:
     build: 
@@ -10,6 +9,9 @@ services:
       - "${API_PORT:-8080}:8080"
     volumes:
       - ./minecraft-data:/data
+      - /var/run/docker.sock:/var/run/docker.sock
+    depends_on:
+      - minecraft
 
   minecraft:
     image: itzg/minecraft-server
@@ -17,6 +19,8 @@ services:
     environment:
       EULA: "TRUE"
       MEMORY: "${MAX_MEMORY:-2G}"
+      VERSION: "${MINECRAFT_VERSION:-1.20.4}"
+      TYPE: "VANILLA"
     volumes:
       - ./minecraft-data:/data
     ports:
