--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -11,6 +11,7 @@
 
 # Misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -18,7 +19,8 @@
 
 # Logs
 npm-debug.log*
-lerna-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # IDE
 .idea/
