--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,25 @@ services:
       dockerfile: Dockerfile
     environment:
       - API_KEY=${API_KEY}
+      - DATA_PATH=${HOST_DATA_PATH}
     ports:
       - "${API_PORT:-8080}:8080"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-    depends_on:
-      - minecraft
+      - ${HOST_DATA_PATH}:/minecraft-data
 
-  minecraft:
-    image: itzg/minecraft-server
-    container_name: mboxmini-server
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     environment:
-      EULA: "TRUE"
-      MEMORY: "${MAX_MEMORY:-2G}"
-      VERSION: "${MINECRAFT_VERSION:-1.21.3}"
-      TYPE: "VANILLA"
-    volumes:
-      - ./minecraft-data:/data
+      - REACT_APP_API_KEY=${API_KEY}
+      - REACT_APP_API_URL=http://localhost:${API_PORT:-8080}
+      - REACT_APP_MINECRAFT_PORT=${MINECRAFT_PORT:-25565}
     ports:
-      - "${MINECRAFT_PORT:-25565}:25565" 
+      - "3000:3000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    depends_on:
+      - api
