--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,45 @@
 services:
-  api:
-    build: 
-      context: ./backend
-      dockerfile: Dockerfile
-    environment:
-      - API_KEY=${API_KEY}
-      - DATA_PATH=${HOST_DATA_PATH}
-    ports:
-      - "${API_PORT:-8080}:8080"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ${HOST_DATA_PATH}:/minecraft-data
-
   frontend:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    environment:
-      - REACT_APP_API_KEY=${API_KEY}
-      - REACT_APP_API_URL=http://localhost:${API_PORT:-8080}
-      - REACT_APP_MINECRAFT_PORT=${MINECRAFT_PORT:-25565}
     ports:
       - "3000:3000"
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
+    environment:
+      - REACT_APP_API_URL=http://localhost:8080
     depends_on:
-      - api
+      backend:
+        condition: service_healthy
+
+  backend:
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    ports:
+      - "8080:8080"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - minecraft_data:/data
+    environment:
+      - API_KEY=${API_KEY}
+      - DATA_PATH=${HOST_DATA_PATH}
+    healthcheck:
+      test: ["CMD", "wget", "--spider", "-q", "http://localhost:8080/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+    depends_on:
+      minecraft-image-pull:
+        condition: service_completed_successfully
+
+  # Service to ensure Minecraft image is pulled
+  minecraft-image-pull:
+    image: itzg/minecraft-server:latest
+    command: echo "Minecraft server image pulled successfully"
+    deploy:
+      replicas: 0
+    pull_policy: always
+
+volumes:
+  minecraft_data:
