frontend re-do. Phase1

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
     "test": "npm run test --prefix frontend",
     "lint": "npm run lint --prefix frontend",
     "postinstall": "npm install --prefix frontend"
+  },
+  "dependencies": {
+    "@types/styled-components": "5.1.34",
+    "styled-components": "6.1.13"
   }
-} 
+}
