--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,10 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - minecraft_data:/data
+      - ./data:/app/data
     environment:
       - API_KEY=${API_KEY}
+      - JWT_SECRET=${JWT_SECRET}
       - DATA_PATH=${HOST_DATA_PATH}
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://localhost:8080/health"]
