--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ backend/server
 .env.development.local
 .env.test.local
 .env.production.local
+.env.backup
 scripts/config/*.env
 !scripts/config/dev.env
 
